# skillguard

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
skillguard/: SKILL.md  __init__.py  analyzer.py  cli.py  formatter.py  rules.py  scanner.py  scorer.py  utils.py
tests/: test_rules.py  test_scanner.py  test_scorer.py
