[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillguard"
version = "0.1.0"
description = "CLI tool to scan AI agent skills for prompt injection, hidden instructions, and unsafe execution."
readme = "README.md"
authors = [{ name = "SkillGuard Maintainers" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["security", "ai", "agent", "prompt-injection", "cli", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console"
]
dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12"
]

[project.urls]
Homepage = "https://example.com/skillguard"
Repository = "https://example.com/skillguard/repo"
Issues = "https://example.com/skillguard/issues"

[project.scripts]
skillguard = "skillguard.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
